tests/rosetta/out/Zig/almost-prime.error
zig build: exit status 1
/tmp/almost-prime.zig:41:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/almost-prime.zig:41:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
